<resources>
    <string name="app_name">CarrosDesign</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="agregar_carro">AGREGAR CARRO</string>
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="color">Color</string>
    <string name="precio">Precio</string>
    <string name="boton_guardar">Guardar</string>
    <string name="boton_limpiar">Limpiar</string>

    <string name="mensaje_guardado_correcto">Carro guardado exitosamente</string>
    <string name="titulo_detalle">DETALLE CARRO</string>
    <string name="etiqueta_boton_eliminar">Eliminar</string>
    <string name="titulo_eliminar_carro">Eliminar Carro</string>
    <string name="pregunta_mensaje_eliminar">¿Está seguto que desea eliminar este carro?</string>
    <string name="opcion_si">Si</string>
    <string name="opcion_no">No</string>
    <string name="titulo_ventana_seleccionar_foto">Seleccione la foto</string>

    <string name="error_placa">Digite la placa</string>
    <string name="error_placa_existente">La placa digitada ya existe</string>
    <string name="error_marca">Digite la marca</string>
    <string name="error_modelo">Digite el modelo</string>
    <string name="error_modelo_ano">Digite un año valido para el modelo</string>
    <string name="error_color">Digite el color</string>
    <string name="error_precio">Digite el precio</string>



</resources>